--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <title>css exercise four</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <section class="container">
-      <h1>Modern luxury <span class="emphasis">travel</span></h1>
-      <div class="preview baku">
-        <h1>Baku</h1>
-      </div>
-      <div class="preview london">
-        <h1>London</h1>
-      </div>
-      <div class="preview madrid">
-        <h1>Madrid</h1>
-      </div>
-      <div class="preview rome">
-        <h1>Rome</h1>
+      <h1 class="heading">Modern luxury <span class="emphasis">travel</span></h1>
+      <div class="images">
+        <div class="preview baku">
+          <h1>Baku</h1>
+        </div>
+        <div class="preview london">
+          <h1>London</h1>
+        </div>
+        <div class="preview madrid">
+          <h1>Madrid</h1>
+        </div>
+        <div class="preview rome">
+          <h1>Rome</h1>
+        </div>
       </div>
     </section>
   </body>
